fix scrollbar issue on Windows

--- a/src/components/popup/intro/intro.less
+++ b/src/components/popup/intro/intro.less
@@ -11,7 +11,7 @@ div.intro {
 
 	.top {
 		max-height: 425px;
-		overflow: scroll;
+		overflow: auto;
 
 		.logo {
 			display: block;
